# bpht_evaluation_workflow

./: README.md  Snakefile  config.yaml  config_desktop.yaml  config_server.yaml  genomes.tsv
bpht_eval/: Cargo.toml
bpht_eval/src/: eval_compare_access_time.rs  eval_compare_access_time_hard_collisions.rs  eval_fill_rate.rs  eval_genome_access_time.rs  eval_genome_fill_time.rs  hash_function.rs  lib.rs  main.rs  plain_hht.rs  qgram_iterator.rs  test_plain_hht.rs
envs/: plotting.yaml
rules/: analysis.smk  files.smk  plotting.smk
scripts/: plot_access_time_comparison.py  plot_fill_rate_random.py  plot_genome_access_time.py  plot_genome_fill_time.py  plot_results.py
